aoc/24: get lib from last year