@@ -1,6 +1,20 @@
 (defproject t "app"
-  :dependencies [[org.clojure/clojure "1.11.1"]]
+  :dependencies [[com.taoensso/tufte "2.6.3"]
+                 [criterium "0.4.6"]
+                 [hato "1.0.0"]
+                 [instaparse "1.5.0"]
+                 [org.clojure/clojure "1.12.0"]
+                 [org.clojure/core.async "1.6.681"]
+                 [org.clojure/core.match "1.1.0"]
+                 [org.clojure/data.int-map "1.3.0"]]
+  :global-vars {*warn-on-reflection* true}
   :main ^:skip-aot t.core
+  :jvm-opts ["-Xverify:none"]
   :target-path "target/%s"
+  :plugins [[com.jakemccrary/lein-test-refresh "0.25.0"]]
+  :test-refresh {:quiet true
+                 :changes-only true}
+  :test-paths ["src"]
+  :repl-options {:init-ns t.core}
   :profiles {:uberjar {:aot :all
                        :jvm-opts ["-Dclojure.compiler.direct-linking=true"]}})
